[package]
name = "lsr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.26", default-features = false }
chrono = "0.4.23"

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.4"